内容の変更

--- a/index.html
+++ b/index.html
@@ -7,21 +7,34 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
-      <ul>
+    <header class="header">
+      <ul class="flexbox">
         <li><a href="">one</a></li>
         <li><a href="">tow</a></li>
         <li><a href="">tree</a></li>
       </ul>
     </header>
-    <main>
+
+    <main class="main">
       <ul>
-        <li>あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめも</li>
-        <li>あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめも</li>
-        <li>あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめも</li>
-        <li>あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめも</li>
-        <li>あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめも</li>
-        <li>あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめも</li>
+        <li>
+          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめも
+        </li>
+        <li>
+          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめも
+        </li>
+        <li>
+          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめも
+        </li>
+        <li>
+          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめも
+        </li>
+        <li>
+          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめも
+        </li>
+        <li>
+          あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめも
+        </li>
       </ul>
     </main>
   </body>
