--- a/index.html
+++ b/index.html
@@ -4,25 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>シングルページレイアウト</title>
   </head>
   <body>
-    <header>
-      <ul>
-        <li><a href="">one</a></li>
-        <li><a href="">tow</a></li>
-        <li><a href="">tree</a></li>
-      </ul>
+    <header class="header">
+      <p class="site-title-sub">web designer's portfolio</p>
+      <h1 class="site-title">HI, MY NAME IS ...</h1>
+      <p class="site-description">Check out some of my works.</p>
+      <div class="buttons">
+        <a class="button" href="#about">LEARN MORE</a>
+        <a class="button button-showy" href="#contact">SEND MASSAGE</a>
+      </div>
     </header>
-    <main>
-      <ul>
-        <li>あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめも</li>
-        <li>あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめも</li>
-        <li>あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめも</li>
-        <li>あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめも</li>
-        <li>あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめも</li>
-        <li>あいうえおかきくけこさしすせそたちつてとなにぬねのはひふへほまみむめも</li>
-      </ul>
-    </main>
+
+    <section class="about" id="about">
+      <h2 class="heading">ABOUT ME</h2>
+      <p class="about-text">はじめまして。日本でwebでざいなーをしています。<br>デザインの専門学校を卒業し、制作会社での業務経験を経て、現在はフリーランスとして働いています。</p>
+      <p class="about-text">このさいとは「HTML/CSSモダンコーディング」という書籍のサンプルとして作られた、架空のwebデザイナーのポートふぃりおサイトです。<br>このサンプルのようなサイトを作ることを通して、HTMLとCSSの実践的なコーディングノウハウを学ぶことができます。</p>
+    </section>
+
+    <section class="works"></section>
+    <section class="skills"></section>
+    <section class="contact" id="contact"></section>
+    <footer class="footer"></footer>
+      
+ 
   </body>
 </html>
